--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,8 @@ p {
 .wrapper {
   width: 90%;
   max-width: 100%;
-  /* margin: 0 auto; */
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .hero,
@@ -262,8 +263,6 @@ p {
   to { opacity: 1; }
 }
 
-
-
 .hero {
   min-height: 100vh;
   /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
@@ -283,7 +282,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 1100px;
-  min-width: 100%;
+  width: 100%;
   margin-top: 2rem;
 }
 
